--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,11 +29,13 @@ dependencies = [
     "requests>=2.32.3",
     "semantic-kernel>=1.25.0",
     "sendgrid>=6.11.0",
-    "setuptools>=78.1.0",    
+    "setuptools>=78.1.0",
     "speedtest-cli>=2.1.3",
     "smithery>=0.1.0",
     "pydantic",
     "pandas",
     "dhanhq",
-    "ta",
+    "ta-lib>=0.6.4",
+    "apscheduler>=3.11.0",
+    "scikit-learn>=1.7.0",
 ]
