phase 2 with bug fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,4 +38,6 @@ dependencies = [
     "ta-lib>=0.6.4",
     "apscheduler>=3.11.0",
     "scikit-learn>=1.7.0",
+    "ipykernel>=6.29.5",
+    "websocket-client>=1.8.0",
 ]
