--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,7 @@ dependencies = [
     "lxml>=5.3.1",
     "mcp-server-fetch>=2025.1.17",
     "mcp[cli]>=1.5.0",
-    "openai>=1.68.2",
-    "openai-agents>=0.0.15",
+    "openai==1.97.0",
     "playwright>=1.51.0",
     "plotly>=6.0.1",
     "polygon-api-client>=1.14.5",
@@ -34,10 +33,12 @@ dependencies = [
     "smithery>=0.1.0",
     "pydantic",
     "pandas",
-    "dhanhq",
+    "dhanhq==2.0.2",
     "apscheduler>=3.11.0",
     "scikit-learn>=1.7.0",
     "ipykernel>=6.29.5",
     "websocket-client>=1.8.0",
-    "ta-lib>=0.6.4",
+    "ta-lib==0.6.4",
+    "openai-agents==0.2.2",
+    "anyio>=4.9.0",
 ]
